# intervals-kit

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SPECIFICATIONS.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: SPECIFICATIONS.md  openapi-spec.json
src/intervals_icu_tools/: __init__.py  cli_tools.md  client.py  errors.py  exporters.py  mcp_server.py  models.py  service.py
src/intervals_icu_tools/cli/: commands.py  main.py
src/intervals_kit/: __init__.py  cli_tools.md  client.py  config.py  mcp_server.py  models.py
src/intervals_kit/cli/: __init__.py  main.py
tests/: conftest.py  test_cli.py  test_client.py  test_mcp.py  test_service.py
