[project]
name = "intervals-icu-tools"
version = "0.1.0"
description = "MCP server and CLI for the Intervals.ICU fitness tracking API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=3.0,<4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
intervals-icu-mcp = "intervals_icu_tools.mcp_server:main"
intervals-icu-tools = "intervals_icu_tools.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intervals_icu_tools"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: marks tests as requiring real API credentials (--run-integration to enable)"]
