[project]
name = "intervals-kit"
version = "0.1.3"
description = "MCP server, CLI, and Python library for the Intervals.ICU fitness tracking API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Josua Sassen" },
    { name = "Helge Esch" },
]
keywords = ["intervals", "intervals.icu", "fitness", "mcp", "cycling", "triathlon", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.0,<4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
"Homepage" = "https://github.com/jrsassen/intervals-kit"
"Repository" = "https://github.com/jrsassen/intervals-kit"
"Issues" = "https://github.com/jrsassen/intervals-kit/issues"

[project.scripts]
intervals-kit = "intervals_kit.mcp_server:main"
intervals-icu-mcp = "intervals_kit.mcp_server:main"
intervals-icu-tools = "intervals_kit.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intervals_kit"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: marks tests as requiring real API credentials (--run-integration to enable)"]
